--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   http: ^1.1.0
+  webview_flutter: ^4.2.3
+  velocity_bloc: ^1.1.4
 
 dev_dependencies:
   flutter_test:
