--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.1.0
   webview_flutter: ^4.2.3
   velocity_bloc: ^1.1.4
+  velocity_x: ^4.1.1
 
 dev_dependencies:
   flutter_test:
